--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,3 +27,19 @@ main {
   width: 100px; */
   border: solid 2px blue;
 }
+
+#modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 300px;
+  max-width: 100%;
+  height: 400px;
+  max-height: 100%;
+  border: solid 2px black;
+}
+
+.bookInfo {
+  display: block;
+}
