--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,7 +8,6 @@ html {
 
 body {
   min-height: 100%; /* body height grows to fit contents, can overflow root height */
-  
   border: solid 2px green;
 }
 
@@ -16,34 +15,58 @@ main {
   border: solid 2px red;
 }
 
-#library {
+#outer-library {
   display: flex;
   border: solid 2px purple;
   gap: 20px;
+  min-height: 200px;
 }
 
 .book {
-  /* height: 100px;
-  width: 100px; */
+  height: 25vmin;
+  width: 15vmax;
   border: solid 2px blue;
 }
 
 #modal {
+  display: none;
   position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 300px;
-  max-width: 100%;
-  height: 400px;
-  max-height: 100%;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0,0.4);
   border: solid 2px black;
 }
 
-.bookInfo {
+#modal-content {
+  background-color: #fefefe;
+  margin: 20% auto; 
+  padding: 20px;
+  border: 1px solid #888;
+  width: 350px; /* Could be more or less, depending on screen size */
+}
+
+.book-info {
   display: block;
 }
 
-.close-button {
+.close {
+  background: none;
+  border: none;
+  color: #aaa;
+  font-size: 28px;
+  font-weight: bold;
   float: right;
+}
+#close:hover,
+#close:focus {
+  color: black;
+  cursor: pointer;
+}
+
+#submit {
+  display: block;
 }
