--- a/styles/styles.css
+++ b/styles/styles.css
@@ -93,27 +93,38 @@ main {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgb(0,0,0,0.4);
+  background-color: rgb(0,0,0,0.43);
   border: solid 2px black;
 }
 
 #modal-form {
-  background-color: #f0ba87;
+  background-color: #fff1e3;
   margin: 20% auto; 
   padding: 20px;
   border: 1px solid #888;
   width: 350px; /* Could be more or less, depending on screen size */
+  
 }
-
+h2 {
+  font-size: 20px;
+  padding-bottom: 10px;
+}
 .error-msg {
   color: red;
 }
-
 .book-info {
   display: block;
   width: 100%;
+  margin: 10px 0;
 }
+#read-label {
+  font-size: 14px;
 
+}
+input[id="read"] {
+  vertical-align: middle;
+  margin-bottom: 4px;
+}
 .close-btn {
   background: none;
   border: none;
@@ -130,4 +141,5 @@ main {
 
 #submit-btn {
   display: block;
+  margin-top: 10px;
 }
